--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <span class="skill-badge">Python</span>
                 </div>
             </div>
-            <button class="know-more-btn" onclick="navigateToHome()">Know More</button>
+            <button class="know-more-btn" onclick="navigateToHome()">Resume</button>
         </div>
     </div>
 
