--- a/home.html
+++ b/home.html
@@ -313,6 +313,7 @@
             <h1 class="fade-in">Mohammed Amaan</h1>
             <p class="fade-in">Machine Learning and AI Enthusiast | Speech Analytics Specialist</p>
             <div class="social-links fade-in">
+                <a href="mailto:amaanextra123@gmail.com" target="_blank">Email</a>
                 <a href="https://www.linkedin.com/in/amaan-p/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/amaanp" target="_blank">GitHub</a>
             </div>
