--- a/home.html
+++ b/home.html
@@ -315,7 +315,7 @@
             <div class="social-links fade-in">
                 <a href="mailto:amaanextra123@gmail.com" target="_blank">Email</a>
                 <a href="https://www.linkedin.com/in/amaan-p/" target="_blank">LinkedIn</a>
-                <a href="https://github.com/amaanp" target="_blank">GitHub</a>
+                <a href="https://github.com/M0hammedd-Amaan" target="_blank">GitHub</a>
             </div>
         </div>
     </header>
