--- a/home.html
+++ b/home.html
@@ -390,9 +390,9 @@
             <h2>Courses & Certificates</h2>
             <ul>
                 <li>The Complete 2023 Web Development by Dr. Angela Yu (Udemy)</li>
-                <li>The Bits and Bytes of Computer Networking by Google</li>
+                <li>Career Essentials in Generative by microsft and linkedin</li>
                 <li>Research Teaser Program on Speech Processing by IIITH</li>
-                <li>Reached top 5 in "Karthavya" National Level Hackathon on Solid Waste Management by Jyothi Engineering College</li>
+                <li>The Bits and Bytes of Computer Networking by Google</li>
             </ul>
         </section>
 
